Fix: `ColonyHomeLayout` allow scrolling overflowing content

--- a/src/modules/dashboard/components/ColonyHome/ColonyHomeLayout.css
+++ b/src/modules/dashboard/components/ColonyHome/ColonyHomeLayout.css
@@ -1,5 +1,6 @@
 .main {
   composes: stretch from '~styles/layout.css';
+  overflow: visible;
 }
 
 .mainContentGrid {
@@ -34,7 +35,7 @@
 }
 
 .mainContent {
-  padding-top: 30px;
+  padding: 30px 0;
 }
 
 .domainsDropdownContainer {
